--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1{
      font-size: 100px;
      color: dodgerblue;
      width: 100vw;
-     height: 60px;
+     height: auto;
      background-color: #717171;
 }
 
